--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
   <body>
-    <div id="app"><p>Hey</p></div>
+    <div id="app">
+      {{ firstName }}
+      {{ lastName }}
+    </div>
 
     <script src="https://unpkg.com/vue@3"></script>
     <script src="app.js"></script>
