--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
   <body>
     <div id="app" v-cloak>
       <p>{{ fullName() }}</p>
+      <p><a :href="url" target="_blank">Google</a></p>
+
       <hr />
 
       <label>First Name</label>
       <input type="text" v-model="firstName" />
 
       <label>Last Name</label>
-      <input type="text">
+      <input type="text" v-model="lastName" />
     </div>
 
     <!-- <div id="app2">
