--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <p>{{ fullName() }}</p>
       <p><a :href="url" target="_blank">Google</a></p>
       <p v-html="raw_url"></p>
+      <p>{{ age }}</p>
 
       <hr />
 
@@ -17,6 +18,9 @@
 
       <label>Last Name</label>
       <input type="text" v-model="lastName" />
+
+      <button type="button" @click="increment">Increment</button>
+      <button type="button" @click="age--">Decrement</button>
     </div>
 
     <!-- <div id="app2">
