--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="app" v-cloak>
-      <p>{{ fullName() }}</p>
+      <p>{{ fullName }}</p>
       <p><a :href="url" target="_blank">Google</a></p>
       <p v-html="raw_url"></p>
       <p>{{ typeof age }}</p>
@@ -20,11 +20,15 @@
       <input type="text" @keyup.enter="updateMiddleName" />
 
       <label>Last Name</label>
-      <input type="text" :value="lastName" @input.prevent="updateLastName('Last name event triggered!', $event)" />
+      <input
+        type="text"
+        :value="lastName"
+        @input.prevent="updateLastName('Last name event triggered!', $event)"
+      />
 
       <label>Age</label>
       <input type="number" v-model.number="age" />
-      
+
       <button type="button" @click="increment">Increment</button>
       <button type="button" @click="age--">Decrement</button>
     </div>
